projects/compiler/test/typechecker/try/error_bad_return_type_result.out
Error at %TEST_DIR%/typechecker/try/error_bad_return_type_result.abra:4:11
Invalid location for try expression
  |    val x = try foo()
               ^
The containing function 'bar' has return type 'Int', which is incompatible with the try expression's type 'Result<Int, String>'.
  |  func bar(): Int {
          ^
To be compatible, 'bar' must return a Result whose error type matches that of the try expression
